fix change password route
